Metodos Numericos en Python3

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 __pycache__
+Comando_Sage_Python3.txt
+Datos.txt
+Dts.txt
+Fun.txt
+Funciones.txt
+FunMul.txt
+FunMul2.txt
+FunMul3.txt
+FunMul4.txt
+FunMul5.txt
+prueba.py
+pruebaFun.txt
+Funciones
